# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  pyproject.toml  requirements.txt
src/mazegen/: __init__.py  config_parser.py  generator.py  output_writer.py  utils.py  visualizer.py
tests/: test_config.py
